# mlkem-esp32

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  SYSTEM_MANUAL.md  USER_MANUAL.MD  USER_MANUAL.md  kat_automat.py  kat_automated_output.txt  sdkconfig  sdkconfig.old
automat_scripts/: README.md  automat.py
comparison/: README.md
comparison/kybesp32/: CMakeLists.txt  README.md  setup_kybesp32.sh
comparison/mlkem-c-embedded/: .gitignore  CMakeLists.txt  README.md  setup_mlkem_c_embedded.sh
comparison/mlkem-c-embedded/main/: CMakeLists.txt  main.c  mlkem_native.h  taskpriorities.h
comparison/mlkem-native/: .gitignore  CMakeLists.txt  README.md  setup_mlkem-native.sh
comparison/mlkem-ref/: CMakeLists.txt  README.md  setup_kyber_ref.sh
comparison/mlkem-wolfssl/: .gitignore  CMakeLists.txt  README.md  README_wolfssl.md  setup_wolfssl.sh
comparison/ref/: .gitignore  README.md
components/fips202/: CMakeLists.txt  KeccakP-1600-SnP.h  fips202.c  fips202.h  symmetric-shake.c  symmetric.h
components/mlkem/: CMakeLists.txt  cbd.c  cbd.h  indcpa.c  indcpa.h  kem.c  kem.h  matrix.c  matrix.h  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c  randombytes.h  reduce.h  task_settings.h  verify.c  verify.h  xt_mul.h
components/test_kat/: CMakeLists.txt  kat.c  kat.h  kat_1024_output_hash.inc  kat_768_output_hash.inc  parse_input.py
main/: CMakeLists.txt  main.c  user_settings.h  user_settings.h.bak
nistkat/: PQCgenKAT_kem.c  PQCgenKAT_kem1024  PQCgenKAT_kem512  PQCgenKAT_kem768  README.md  input.json  kat_512_output_hash.inc  kat_input_vectors.inc  parse_output.py
(+21 files in other folders)
